# list_app

./: .gitignore  AGENTS.md  ARCHITECTURE.md  pyproject.toml
plans/: advanced_sharing.md  codebase_cleanup_findings_2026-04-22.md  hybrid_security_rooms.md  item_service_plan.md  multi_list_plan.md  mvp_v1_plan.md  navigation_plan.md  pwa_implementation.md  room_passwords_and_share_links.md  security_options.md  subplan_1_single_room_password.md  subplan_2_multi_room.md  tag_ux_redesign.md  tags_and_assignments.md  testing_plan.md
src/: database_crud.py  database_setup.py  item_service.py  main.py  models.py
src/static/: manifest.json
tests/: conftest.py  test_database_crud.py  test_item_service.py
